; ModuleID = '/home/carl/AnghaBench/vlc/modules/access/dtv/extr_access.c_GetSingleDelivery.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/access/dtv/extr_access.c_GetSingleDelivery.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DTV_DELIVERY_NONE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64)* @GetSingleDelivery to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @GetSingleDelivery(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  %4 = load i64, i64* %3, align 8
  %5 = icmp eq i64 %4, 0
  br i1 %5, label %6, label %8

6:                                                ; preds = %1
  %7 = load i64, i64* @DTV_DELIVERY_NONE, align 8
  store i64 %7, i64* %2, align 8
  br label %13

8:                                                ; preds = %1
  %9 = load i64, i64* %3, align 8
  %10 = call i32 @ctz(i64 %9)
  %11 = shl i32 1, %10
  %12 = sext i32 %11 to i64
  store i64 %12, i64* %2, align 8
  br label %13

13:                                               ; preds = %8, %6
  %14 = load i64, i64* %2, align 8
  ret i64 %14
}

declare dso_local i32 @ctz(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
